Change the default home page

--- a/web/templates/layout/application.html.eex
+++ b/web/templates/layout/application.html.eex
@@ -14,10 +14,6 @@
   <body>
     <div class="container">
       <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
-        </ul>
-        <span class="logo"></span>
       </div>
 
       <p class="alert alert-info"><%= get_flash(@conn, :info) %></p>
@@ -26,7 +22,7 @@
       <%= @inner %>
 
       <div class="footer">
-        <p><a href="http://phoenixframework.org">phoenixframework.org</a></p>
+        <p>Proudly built on the <a href="http://phoenixframework.org">phoenixframework.org</a></p>
       </div>
 
     </div> <!-- /container -->
